<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.coley</groupId>
	<artifactId>recaf</artifactId>
	<url>https://github.com/Col-E/Recaf/</url>
	<version>1.11.1</version>
	<name>Recaf</name>
	<description>A modern java bytecode editor</description>
	<!--
	Variables
	-->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<asm.version>7.1</asm.version>
		<cfr.version>0.141</cfr.version>
	</properties>
	<!-- Additional repo's -->
	<repositories>
		<!-- 3rd party repo, used because I'm too lazy to register on the central -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<!-- Dependencies, some are inferred by dependencies of listed dependencies -->
	<dependencies>
	<!-- Functionality -->
		<!--
		ASM: The "all" distribution is not updated as frequently
		and debug information is now included in these partial releases.
		* https://mvnrepository.com/artifact/org.ow2.asm/asm
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-tree
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-commons
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-util
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-analysis
		-->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-tree</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-util</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-commons</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-analysis</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>3.13.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.benf/cfr -->
		<dependency>
			<groupId>org.benf</groupId>
			<artifactId>cfr</artifactId>
			<version>${cfr.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.jimfs/jimfs -->
		<dependency>
			<groupId>com.google.jimfs</groupId>
			<artifactId>jimfs</artifactId>
			<version>1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.eclipsesource.minimal-json/minimal-json -->
		<dependency>
			<groupId>com.eclipsesource.minimal-json</groupId>
			<artifactId>minimal-json</artifactId>
			<version>0.9.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.plugface/plugface-core -->
		<dependency>
		    <groupId>org.plugface</groupId>
		    <artifactId>plugface-core</artifactId>
		    <version>0.7.1</version>
		</dependency>
		<dependency>
			<!-- Plugface uses SLF4j, which has an annoying warning msg, this shuts it up -->
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.21</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.jregex/jregex -->
		<dependency>
			<groupId>net.sourceforge.jregex</groupId>
			<artifactId>jregex</artifactId>
			<version>1.2_01</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.atlassian.commonmark/commonmark -->
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>0.12.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>3.9.5</version>
		</dependency>
	<!--- User interface -->
		<!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.9.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>8.40.14</version>
			<!-- <version>9.0.0</version> -->
		</dependency>
	<!-- From jitpack.io -->
		<!-- https://jitpack.io/#Col-E/Simple-Memory-Compiler/ -->
		<dependency>
			<!-- Implies system-dependent tools.jar from JDK -->
			<groupId>com.github.Col-E</groupId>
			<artifactId>Simple-Memory-Compiler</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- https://jitpack.io/#Col-E/logging/ -->
		<dependency>
			<groupId>com.github.Col-E</groupId>
			<artifactId>logging</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- https://jitpack.io/#Col-E/Events/ -->
		<dependency>
			<groupId>com.github.Col-E</groupId>
			<artifactId>Events</artifactId>
			<version>1.4.1</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<includes>
					<include>resources/**/*</include>
				</includes>
			</resource>
		</resources>
		<plugins>		
			<!-- Compiler version -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<!-- <release>10</release> -->
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- Maven version enforcement -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4.1</version>
				<executions>
					<execution>
					<id>enforce-maven</id>
					<goals>
						<goal>enforce</goal>
					</goals>
					<configuration>
						<rules>
						<requireMavenVersion>
							<version>3.1.0</version>
						</requireMavenVersion>
						</rules>
					</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Packaging -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>me.coley.recaf.Recaf</mainClass>
						</manifest>
						<manifestEntries>
							<Premain-Class>me.coley.recaf.bytecode.Agent</Premain-Class>
							<Agent-Class>me.coley.recaf.bytecode.Agent</Agent-Class>
							<Can-Redefine-Classes>true</Can-Redefine-Classes>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
							<!-- JDK 9+ compat for RichTextFX -->
							<Add-Exports>javafx.graphics/com.sun.javafx.geom javafx.graphics/com.sun.javafx.text javafx.graphics/com.sun.javafx.scene.text</Add-Exports>
							<Add-Opens>javafx.graphics/javafx.scene.text javafx.graphics/com.sun.javafx.text</Add-Opens>
						</manifestEntries>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.5</version>
				<configuration>
					<!--
					    Enables analysis which takes more memory but finds more bugs.
					    If you run out of memory, changes the value of the effort element
					    to 'low'.
					-->
					<effort>Max</effort>
					<!-- Reports all bugs (other values are medium and max) -->
					<threshold>Low</threshold>
					<!-- Produces XML report -->
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
		</plugins>
	</reporting>
</project>